--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "mcmm",
-  "version": "1.0.1",
-  "description": "A very cool modpack",
-  "scripts": {
-    "build": "mcbuilder build",
-    "test": "echo \"Error: no test specified\" && exit 0"
-  },
-  "author": "lukas2005",
-  "license": "GPL-3.0",
-  "devDependencies": {
-    "mcbuilder": "^1.0.5"
-  }
+	"name": "mcmm",
+	"version": "1.0.2",
+	"description": "A very cool modpack",
+	"scripts": {
+		"build": "mcbuilder build",
+		"patch": "node next.js patch",
+		"minor": "node next.js minor",
+		"major": "node next.js major",
+		"test": "echo \"Error: no test specified\" && exit 0"
+	},
+	"author": "lukas2005",
+	"license": "GPL-3.0",
+	"devDependencies": {
+		"mcbuilder": "^1.0.5",
+		"semver": "^6.3.0"
+	}
 }
