--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mcmm",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "A very cool modpack",
 	"scripts": {
 		"build": "mcbuilder build",
@@ -14,5 +14,14 @@
 	"devDependencies": {
 		"mcbuilder": "^1.0.5",
 		"semver": "^6.3.0"
-	}
+	},
+	"dependencies": {},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/lukas2005/MCMM.git"
+	},
+	"bugs": {
+		"url": "https://github.com/lukas2005/MCMM/issues"
+	},
+	"homepage": "https://github.com/lukas2005/MCMM#readme"
 }
