--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,66 @@
 	"forgeVersion": "14.23.5.2847",
 	"dependencies": [
 		{
+			"name": "jei_1.12.2-4.15.0.291.jar",
+			"projectId": 238222,
+			"fileId": 2803400
+		},
+		{
+			"name": "Baubles-1.12-1.5.2.jar",
+			"projectId": 227083,
+			"fileId": 2518667
+		},
+		{
+			"name": "CraftTweaker2-1.12-4.1.20.jar",
+			"projectId": 239197,
+			"fileId": 2838090
+		},
+		{
+			"name": "Chisel-MC1.12.2-1.0.1.44.jar",
+			"projectId": 235279,
+			"fileId": 2813538
+		},
+		{
+			"name": "InventoryTweaks-1.63.jar",
+			"projectId": 223094,
+			"fileId": 2482481
+		},
+		{
+			"name": "ironchest-1.12.2-7.0.72.847.jar",
+			"projectId": 228756,
+			"fileId": 2747935
+		},
+		{
+			"name": "tinkersoc-0.6.jar",
+			"projectId": 287267,
+			"fileId": 2645185
+		},
+		{
+			"name": "OpenLights-MC1.12.2-0.1.0.8.jar",
+			"projectId": 225225,
+			"fileId": 2777004
+		},
+		{
+			"name": "CTM-MC1.12.2-0.3.3.22.jar",
+			"projectId": 267602,
+			"fileId": 2642375
+		},
+		{
+			"name": "TConstruct-1.12.2-2.13.0.171.jar",
+			"projectId": 74072,
+			"fileId": 2809406
+		},
+		{
+			"name": "Mantle-1.12-1.3.3.55.jar",
+			"projectId": 74924,
+			"fileId": 2713386
+		},
+		{
+			"name": "OpenPrinter-1.12.2-0.1.0.9.jar",
+			"projectId": 225127,
+			"fileId": 2817562
+		},
+		{
 			"name": "OpenComputers-MC1.12.2-1.7.5.192.jar",
 			"projectId": 223008,
 			"fileId": 2828357
@@ -12,12 +72,6 @@
 	"name": "MCMM",
 	"description": "Hi",
 	"author": "hel",
-	"clientDependencies": [
-		{
-			"name": "DiscordSuite-2.2.4.jar",
-			"projectId": 282743,
-			"fileId": 2577684
-		}
-	],
+	"clientDependencies": [],
 	"serverDependencies": []
 }
